--- a/index.html
+++ b/index.html
@@ -15,11 +15,24 @@
     <div class="wrap__inner">
       <div class="filter" id="filter"></div>
   
-      <h1 id="spinner">Spinner</h1>
+      <h1 id="spinner">Spinner infinite</h1>
+      <h1 id="spinnerSuccess">Spinner success</h1>
       <h1 id="printer">Printer</h1>
+      <h1 id="barcode">Barcode</h1>
   
       <div class="wrap__popup">
+
         <div class="spinner"></div>
+
+      <div class="resultSpinner__wrap">
+        <div class="spinnerResult" id="js-spinner"></div>
+          <svg class="result-group" width="36" height="34" viewBox="-3 -2 50 50">
+            <path class="success-tick" id="js-success-tick" d="M13.2,19.31l10,11.14c.29.32.79.32,1.22-.16L46.26,5.48"></path>
+            <path class="success-ring" id="js-success-ring" d="M37.13,5a23,23,0,1,0,10,16.08h0A23.22,23.22,0,0,0,46,16.5"></path>
+          </svg>
+        <div class="notify__progress-bar" id="js-progress-bar"></div>
+      </div>
+
         <div class="printer">
             <svg width="52" height="52" xmlns="http://www.w3.org/2000/svg">
               <g fill="none" fill-rule="evenodd">
@@ -31,10 +44,49 @@
                 <path stroke="#000" stroke-linecap="square" d="M16 34v14h20V34"/>
                 <path d="M42.384 14.912V2.319c0-.725-.594-1.319-1.32-1.319H10.83c-.725 0-1.32.594-1.32 1.319v12.593" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path stroke="#000" stroke-linecap="square" d="M16 14.912V5h20v9.912"/>
-                <path d="M9.245 23.44h3.334" stroke="#0f0" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path class="printerLight" d="M9.245 23.44h3.334" stroke="#0f0" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </g>
             </svg>            
         </div>
+
+
+        
+        <div class="wrap__scanner">
+            <div class="barcode">
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>           
+                <div class="diode">
+                  <div class="laser"></div>
+                </div>
+              </ul>
+            </div>
+          </div>
+
+
+
       </div>
   
     </div>
