restyle landing, script fixes

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
   <div class="wrap__main">
     <div class="wrap__inner">
       <div class="filter" id="filter"></div>
-  
-      <h1 id="spinner">Spinner infinite</h1>
-      <h1 id="spinnerSuccess">Spinner success</h1>
-      <h1 id="printer">Printer</h1>
-      <h1 id="barcode">Barcode</h1>
+
+      <div class="button-wrapper">
+        <button id="spinner" class="button button--pink">Spinner</button>
+        <button id="spinnerSuccess" class="button button--purple">Spinner to success</button>
+        <button id="printer" class="button button--tomato">Printer</button>
+        <button id="barcode" class="button button--blue">Barcode</button>
+      </div>
+
+
   
       <div class="wrap__popup">
 
