--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="spinner"></div>
 
       <div class="resultSpinner__wrap">
-        <div class="spinnerResult" id="js-spinner"></div>
+        <div class="spinnerResult" id="js-resultSpinner"></div>
           <svg class="result-group" width="36" height="34" viewBox="-3 -2 50 50">
             <path class="success-tick" id="js-success-tick" d="M13.2,19.31l10,11.14c.29.32.79.32,1.22-.16L46.26,5.48"></path>
             <path class="success-ring" id="js-success-ring" d="M37.13,5a23,23,0,1,0,10,16.08h0A23.22,23.22,0,0,0,46,16.5"></path>
@@ -56,38 +56,20 @@
 
         
         <div class="wrap__scanner">
-            <div class="barcode">
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>           
-                <div class="diode">
-                  <div class="laser"></div>
-                </div>
-              </ul>
+          <div class="barcode">
+              <svg class="barcodeSVG" width="36" height="34" viewBox="0 0 41 37">
+                    <style>
+                        .cls-1{fill:none;stroke:#231f20;stroke-linecap:round;stroke-linejoin:round;stroke-width:2px}
+                    </style>
+                <g id="Layer_2" data-name="Layer 2">
+                    <path class="cls-1" d="M11 1H3a2 2 0 0 0-2 2v8M30 1h8a2 2 0 0 1 2 2v8M11 36H3a2 2 0 0 1-2-2v-8m29 10h8a2 2 0 0 0 2-2v-8M9 10v18m4-18v18m0-18v18m4-18v18m0-18v18m4-18v18m0-18v18m4-18v18m0-18v18m4-18v18m0-18v18m4-18v18" id="Layer_2-2" data-name="Layer 2"/>
+                </g>
+            </svg>
+            <div class="diode">
+              <div class="laser"></div>
             </div>
           </div>
+        </div>
 
 
 
